pa_openmsg()
pa_openmsgv6()
pa_waitmsg()
pa_maxmsg()
pa_maxmsgv6()
pa_wrmsg()
pa_rdmsg()
pa_clsmsg()
pa_waitnet()
pa_relymsg()
pa_relymsgv6()
pa_certmsg()
pa_certnet()
pa_certlistnet()
pa_certlistmsg()

LINUX

The Linux version is tested on Ubuntu 20.04. Running with other version will
probably necessitate adaption work at this time.

THe Linux graphics.c module has achieved graphics level. To be done are managed
windows mode and widget mode. This leaves only clock.c that cannot be tested
in the graph_programs directory.

The network module lacks the following calls:

pa_certlistnet()
pa_certlistmsg()

The linux subsystem uses a patched version of GLIBC that can have the read(),
write(), open() and close() calls overridden. GLIBC must match the kernel 
version in use. I have generated many common kernel versions of glibc under
Ubuntu. The command setver_glibc should be able to automatically find and
configure such versions, and it is automatically executed as part of 
./configure.

If the kernel version of glibc your system is not precompiled, then you can 
generate one for your system using build_glibc, which takes care of the entire
process of fetching glibc source, patching it and building it.

If that still does not work, send me email.

The override version of glibc is necessary only on the Linux version. It was
needed because some programs expect glibc code to be in use, and use 
undocumented code and data structures in glibc. Such programs include gdb.
Its a heavy handed solution to a difficult problem, but I hope to find a
better workaround in the future.

C++

The cpp and hpp directories contain an initial implementation of the C++
wrapper should you wish to play around with it. It is for terminal mode only.
It works well, and time permitting I plan to extend it. It is undocumented
except for having the source itself at this time.

Hopefully this will be sufficient to get an idea what the system can do.
 
Thanks,
 
Scott A. Franco
San Jose, CA